<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/txt_result"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/getResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="32dp"
            android:text="@string/num_result"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/num_one_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/num_one_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:autofillHints="@string/num_one_input"
            android:hint="@string/num_one_input"
            android:inputType="number"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHint="#5E5E5E" />

        <TextView
            android:id="@+id/num_two_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_two_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="@string/num_two_input"
            android:hint="@string/num_two_input"
            android:inputType="number"
            android:textColorHint="#5E5E5E" />

        <Button
            android:id="@+id/btnSumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="sumar"
            android:text="@string/txt_btn_sumar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnRestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="restar"
            android:text="@string/txt_btn_restar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="multiplicar"
            android:text="@string/txt_btn_multip"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="dividir"
            android:text="@string/txt_btn_dividir"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/btn_salir"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>